# imap-mcp

./: MODIFICATIONS_PLAN.md  pyproject.toml
imap_mcp/: config.py  imap_client.py  mcp_protocol.py  models.py  resources.py  server.py  tools.py
tests/: test_config.py  test_imap_client.py  test_imap_client_drafts.py  test_models.py  test_server.py  test_tools.py
